tests/base/invalid/ListSublist_CompileFail_1.whiley
void System::main([string] args):
    end = 1.2344
    list = [1,2,3]
    sublist = list[-1..end]
    out<->println(str(list))
    out<->println(str(sublist))
